# AutoCtrl_uRos

./: README.md  platformio.ini
AutoCtrl_uRos/: AutoCtrl_uRos.code-workspace  README.md  platformio.ini
AutoCtrl_uRos/extra_packages/aav_drive_msg/: CMakeLists.txt
AutoCtrl_uRos/extra_packages/aav_drive_msg/msg/: Drive.msg  aav_drive_msg.msg
AutoCtrl_uRos/extra_packages/ackermann_drive/: CMakeLists.txt  package.xml
AutoCtrl_uRos/install/: local_setup.sh  setup.sh
AutoCtrl_uRos/log/: latest_build
AutoCtrl_uRos/src/: main.cpp
AutoCtrl_uRos/src/AAV_fns/: AAV_fns.cpp  AAV_fns.h
AutoCtrl_uRos/src/SteeringBraking/: Braking.cpp
AutoCtrl_uRos/src/esp32_joy_publisher/: main.cpp
AutoCtrl_uRos/src/esp32_ros/: main.cpp
AutoCtrl_uRos/src/hardware_fns/: hardware_config.h  hardware_fns.cpp  hardware_fns.h
AutoCtrl_uRos/src/nano33_periph/: main.cpp
AutoCtrl_uRos/src/uRos_fns/: uRos_fns.cpp  uRos_fns.h
extra_packages/aav_drive_msg/: package.xml
extra_packages/ackermann_msgs/: CMakeLists.txt  package.xml
extra_packages/ackermann_msgs/msg/: AckermannDrive.msg
src/RC_esp/: main.cpp
src/esp32_joy_publisher/: main.cpp
src/esp32_ros/: CMakeLists.txt  Control_Config.h  main.cpp
src/esp32_ros/AAV_fns/: AAV_fns.cpp  AAV_fns.h
src/esp32_ros/SteeringBraking/: Braking.cpp  Braking.h  MotorCtrl.cpp  MotorCtrl.h  Steering.cpp  Steering.h
src/esp32_ros/hardware_fns/: hardware_config.h  hardware_fns.cpp  hardware_fns.h
src/esp32_ros/uRos_fns/: uRos_fns.cpp  uRos_fns.h
src/nano33_periph/carFns/: carFns.cpp  carFns.h
(+6 files in other folders)
